# sparkyRay

./: .gitignore  docker-compose.yml  lol.py  pusher.py  ray.py  reader.py  renderer.py  requirements.txt  test.py  testray.py  worker.py
rustyray/: Cargo.toml  readme.md  scene1.json  scene1.yml  test.vert  triangle_collide.frag
rustyray/benches/: bench_render.rs
rustyray/src/: game.rs  main.rs  rustyray.rs  sdl_loader.rs
rustyray/tests/: rustray_test.rs
