[package]
name = "rustyray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray =  {version = "0.15.4", features = ["serde"] }
image = "0.24.2"
itertools-num = "0.1.3"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "rustyray"
path = "src/rustyray.rs"
