[package]
name = "rustyray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray =  {version = "0.15.4", features = ["serde","blas"] }
image = "0.24.2"
itertools-num = "0.1.3"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }

nalgebra = "0.31.0"
winit = "0.26.1"

stl_io = "0.6.0"

rayon = "1.5.3"
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }


[dependencies.sdl2]
sdl2 = "0.35.2"
default-features = false
features = ["gfx","ttf",]



[dev-dependencies]
criterion = "0.3"



[lib]
name = "rustyray"
path = "src/rustyray.rs"


[[bench]]
name = "bench_render"
harness = false

